Fixed text align
I matched the text alignment of the "CV" page to match the contact page

--- a/css/styles2.css
+++ b/css/styles2.css
@@ -137,7 +137,7 @@ body {
 }
 #contactme {
   padding-top: 5em;
-  padding-left: 23em;
+  padding-left: 22.7em;
   padding-right: 40em;
   text-align: justify;
   font-family: 'Noto Sans TC', sans-serif;
