--- a/css/stylescv.css
+++ b/css/stylescv.css
@@ -120,7 +120,7 @@ body {
 
 #cv {
   font-family: 'Noto Sans TC', sans-serif;
-
+padding-left: 17em;
 }
 
 #concordia {
